--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.27]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.28]</h1><br><br><br>
 
 
 
@@ -60,6 +60,101 @@
 
 
 
+
+    <a></a>
+    [클루지 87p] 친숙한 것을 선호하는 경향은 훨씬 중요한 이해관계가 걸린 현실 세계에서도 당연히 나타난다. 이것은 왜 현직에 있는 사람이 선거에서 거의 언제나 유리한 위치에 있는지를 설명해준다.
+    <br><br>
+
+    <a></a>
+    [클루지 81-82p] 여러 연구에 따르면 집안일을 함께 하기이든 학술논문의 공동 집필이든 거의 모든 협동 작업에서 주관적으로 지각된 각 개인의 공헌의 합은 실제로 수행된 작업의 총량을 초과한다. 우리는 다른 사람이 한 일은 잘 기억하지 못하면서 자기가 한 일은 잘 기억한다. 때문에 누구나 다른 사람이 부당하게 이익을 취하고 있다는 느낌을 받게 된다. 만약 우리의 자료 표본(곧 우리의 기억)이 제한된 것이라는 점을 깨닫는다면 우리 모두는 훨씬 더 관대해질 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 78-79p] 중요한 것은 우리의 모든 신념이 예측하기 어려운 맥락 기억의 여과작용을 거친다는 사실이다. 이전에 형성된 신념이 곧바로 머릿속에 떠오르는 경우도 있지만, 그렇지 않은 경우에는 그때그때 머리에 떠오르는 기억을 바탕으로 우리의 신념을 계산해내지 않으면 안 된다.<br>
+    그러나 신념이 변덕스러운 기억에 얼마나 많이 오염될 수 있는지를 제대로 깨닫고 있는 사람은 그리 많지 않다. 데이트에 관한 질문을 먼저 받았던 학생들을 생각해보라. 아마도 그들은 자기가 행복에 관한 두 번째 질문에 대해 최대한 객관적으로 대답했다고 생각했을 것이다. 이 두 번째 질문에 대한 대답이 첫 번째 질문에 대한 대답 때문에 편향될 수도 있다는 사실을 깨달은 학생이 있다면, 그는 자기의식이 예외적으로 강한 학생일 것이다. 정신의 오염이란 잉처럼 알아차리기 어려운 것이다. 우리가 객관적으로 처신하고 있다는 우리의 주관적 인상은 객관적 현실과 좀처럼 일치하지 않는다. 우리가 객관적으로 사고하려고 아무리 애를 써도 인간의 신념은 기억에 의해 매개되기 때문에, 우리가 아주 어렴풋이 의식하는 사소한 것들의 영향에서 결과 벗어날 수 없다.
+    <br><br>
+
+    <a></a>
+    [클루지 75-76p] 우리는 어떤 사람에 대해 한 측면에서 긍정적인 느낌을 받으면 그것을 자동적으로 일반화해서, 그 사람의 다른 속성들까지 긍정적으로 평가하는 경향이 있다. 심리학자들은 이것을 '후광효과(halo effect)'라고 부른다. 이것은 반대의 경우도 마찬가지여서, 만약 우리가 어떤 사람에 대해 부정적인 특성을 발견하게 되면 우리는 그 사람의 나머지 속성들도 부정적일 것이라고 추측하는 경향이 있다. 일종의 '갈퀴효과'인 셈이다.
+    <br><br>
+
+    <a></a>
+    [클루지 75p] 우리 인간의 신념은 진화의 과정 속에서 주로 다른 목적을 위해 진화된 '재고품'들을 바탕으로 생겨난 것이다. 때문에 우리는 종종 이런저런 신념들이 어디에서 비롯되었는지 스스로도 알지 못하며, 나아가 우리가 부적절한 정보의 영향을 얼마나 크게 받는지 전혀 눈치 채지 못하곤 한다.
+    <br><br>
+
+    <a></a>
+    [클루지 74-75p] 우리 인간이 신념을 가질 수 있는 능력은 절대적 진리를 발견하고 부호화하는 객관적인 기계처럼 작동하는 것이 아니라, 무계획적인 진화의 흉터를 고스란히 지니고 있으며, 감정, 기분, 욕구, 목표, 사리사욕 따위에 오염되어 있다. 게다가 기억의 특이한 경향들에 놀라울 정도로 취약하다. 우리는 매우 속기 쉬운 존재인데, 이렇게 볼 때 신념과 관련된 우리의 능력은 훌륭한 공학의 산물이라기보다 진화의 편법에 가깝다는 인상을 풍긴다. 한마디로 말해 신념과 관련된 우리의 능력을 떠받치는 체계는 한편으로 강력한 것이지만, 다른 한편으로 미신, 조작, 오류에 취약한 것이기도 하다. 이것은 결코 하찮은 문제가 아니다. 신념 때문에, 그리고 그것을 평가하는데 사용되는 불완전한 신경 도구 때문에, 가정 불화와 종교 분쟁과 심지어 전쟁까지도 일어나지 않는가.
+    <br><br>
+
+    <a></a>
+    [클루지 74p] 사람들은 막연한 일반론을 과잉 해석하여, 실제로는 그렇지 않은데도 마치 그것이 (특별히) 자기 자신에 대한 것인 양 믿는 경향이 있다는 점이다. 특히 이런 막연한 기술에 몇가지 긍정적인 속성들이 포함되어 있을 경우에, 이런 종류의 함정은 더욱 강력해진다.
+    <br><br>
+
+    <a></a>
+    [클루지 66p] 매우 많은 것이 기억에 의존하고 있지만 기억은 심할 정도로 신뢰할 수 없는 것이다.<br>
+    그 중요한 이유는 우리가 컴퓨터로서가 아니라, 말 그대로 행위자로서 진화했기 때문이다. 우리는 행동하는 유기체, 세계를 지각하고 그것에 반응해 행동하는 존재다. 그리고 이런 사정 때문에 정확성보다는 속도를 중시하는 기억 체계가 발달하였다. 많은 상황에서, 특히 신속한 결정이 필요한 상황에서 최신성(recency)과 빈도와 맥락은 기억을 조정하기에 적합한 강력한 도구들이다.
+    <br><br>
+
+    <a></a>
+    [클루지 54-55p] 목격자 증언이 신뢰하기 어려운 까닭은 우리의 기억이 조각조각 저장되어 있기 때문이다. 다시 말해 기억들의 위치를 확인하고 그것들을 정돈하기에 적합한 체계가 존재하지 않기 때문에, 그것들의 인출은 맥락의 영향을 받게 된다. 인간의 기억이 비디오 테이프 녹화기처럼 원본에 충실하기를 기대한다면 그것은 명백히 비현실적인 것이다. 사건이나 범죄에 대한 기억도 다른 모든 기억과 마찬가지로 왜곡될 수 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [클루지 48p] 어떤 정보를 필요로 하는 상황이 그것을 처음 저장했던 상황과 일치할 때는 맥락에 의지하는 것이 멋지게 작동한다. 그러나 어떤 것을 배웠을 때의 원래 상황과 그것을 기억해낼 필요가 있는 나중 상황이 일치하지 않을 때는 문제가 생길 수 있다.
+    <br><br>
+
+    <a></a>
+    [클루지 45-46p] 맥락 기억의 고유한 단점은 신뢰성과 관련된 것이다. 인간의 깅거은 뇌 속의 위치가 아니라 단서를 중심으로 매우 강력하게 조종되기 때문에 쉽게 혼동이 일어난다.
+    <br><br>
+
+    <a></a>
+    [클루지 44-45p] 맥락 기억은 저장된 정보에 접근하기에 적합한 우편번호 체계를 만들어낼 수 없었던 자연이 그것을 보상하기 위해 만들어낸 투박한 임시변통일지 모른다. 그러나 우리의 기억 체계에도 몇 가지 명백한 장점이 있다. 우선 맥락 의존적인 기억은 컴퓨터처럼 모든 기억을 똑같이 취급하는 대신에 우선순위를 매긴다. 그래서 자주 일어나는 것, 우리가 최근에 필요로 했던 것, 지금과 비슷한 상황에서 이전에 중요했던 것 등을, 한마디로 말해 우리에게 가장 유용할 가능성이 큰 정보를 가장 빨리 머릿속으로 불러낸다. 나아가 맥락 의존적인 기억은 빠르게 병렬로 탐색될 수 있다. 이것은 뉴런이 디지털 컴퓨터의 메모리칩보다 수백만 배 느리다는 점을 보상하는 좋은 방법이 될 수 있다. 게다가 우리는 (컴퓨터와 달리) 우리 자신의 내부 하드웨어에 대한 정보를 가지고 있을 필요가 없다. 우리에게 필요한 것을 기억 속에서 찾기 위해 중요한 것은 우리 자신에게 올바른 질문을 던지는 일이지, 뇌 속 특정 세포 집단을 찾아내는 일이 아니다.
+    <br><br>
+
+    <a></a>
+    [클루지 36-37p] 클루지가 완전한 것보다 더 많든, 아니면 완전한 것이 클루지보다 더 많든 상관없이, 우리는 완전한 것에서 배울 수 없는 두 가지를 클루지에서 배울 수 있다. 첫째로 클루지는 우리가 진화해온 역사에 대해 특별한 통찰을 제공할 수 있다.
+    (중략) 그리고 둘째로 클루지는 우리 자신을 어떻게 개선시킬 것인지에 대해 단서를 줄 수 있다. 우리가 80퍼센트 완전하든 아니면 20퍼센트 완전하든 우리 인간에게는 개선의 여지가 있다. 그리고 클루지는 이 길을 우리에게 제시 할 수 있다. 우리가 진화해온 현재의 모습 그대로를 솔직히 들여다 볼 때, 우리의 장점뿐 아니라 단점도 인정할 때, 비로소 우리는 불완전하지만 고귀한 우리의 마음을 최대한 활용할 수 있을 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 19p] 물론 인간의 마음은 의논의 여지없이 인상적이며, 우리 주변의 어떤 대안적 장치보다도 훨씬 뛰어나다. 그러나 인간의 마음은 여전히 많은 결함을 지니고 있다. 게다가 우리는 종종 그러한 사실을 깨닫지도 못한다. 대부분의 경우에 우리는 우리의 결함들을 그냥 받아들인다. 감정의 폭발, 그저 그런 기억력, 편견에 사로잡히는 경향 등을 우리는 우리 마음의 표준적인 능력으로 받아들인다.<br>
+    바로 그렇기 때문에 우리 마음이 클루지라는 것을 깨닫기 위해서는, 그리고 그것을 개선하기 위해서는, 때때로 '상자' 밖에서 생각할 필요가 있다. 최선의 과학은 최선의 공학과 마찬가지로, 종종 사물이 어떻게 존재하는가를 이해하는 것보다 사물이 어떻게 달리 존재할 수도 있었을까를 이해하는 데서 출발한다.
+    <br><br>
+
+    <a></a>
+    [클루지 14p] 우리 인간은 체계적으로 미래를 설계할 만큼 영리한 유일한 종이다. 하지만 동시에 매우 주의 깊게 짠 계획을 순간의 만족 대문에 내팽개칠 만큼 어리석기도 하다.
+    <br><br>
+
+    <a></a>
+    [스틱! 414p] 노스트롬 백화점의 노디들, 제러드, 토성의 고리에 얽힌 미스터리, 반흡연 운동의 반권위자 팸 라핀, 심전도 모니터를 무시하고 청진기를 사용해 어린아이의 생명을 구한 간호사 등. 그 이야기들은 모두 누군가에 의해 창조된 것이 아니라 발견되었을 뿐이다. 위대한 발견자는 언제나 위대한 창조자가 될 수 있다. 어떻게 그럴 수가 있냐고? 왜냐하면 우리가 사는 이 세상은 그 누구보다도, 심지어 세상에서 가장 창의적인 사람보다도 훨씬 크고 위대한 메시지를 창조하고 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 400p] 어떤 종류의 스토리가 잘 먹히는가, 그리고 그것들은 어째서 그토록 효과가 좋은 것일까? 첫 번째 놀라움은 아이디어를 착 달라붙게 만드는 데에는 어떤 종류의 스토리가 효과적인가와 관련이 있다. 답이 뭐냐고? 실질적으로 거의 모든 스토리가 그렇다. 스토리는 굳이 극적일 필요도 없고, 사람들의 정신을 사로잡을 필요도 없으며, 재미있을 필요도 없다. 스토리의 형태 자체가 가장어려운 일을 해주기 때문이다. 우디 앨런은 말했다. "삶의 90퍼센트는 그저 눈에 띄기만 해도 된다." 이는 스토리텔링에 있어서도 마찬가지다. 어떤 것의 가치는 90퍼센트는 시도에서 온다.
+    <br><br>
+
+    <a></a>
+    [스틱! 356p] 최고의 발표자들은 프레젠테이션을 설명으로 점철하지 않는다. 그들은 "이 다음엔 뭐라고 말하지?"를 생각하지 않기 때문이다. 대신 그들은 "이 다음에는 어떤 질문으로 사람들을 고민하게 만들까?"를 생각한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 351p] 데이터란 수천 개의 스토리를 단순히 요약한 것에 지나지 않는다. 그러므로 데이터에 의미를 부여하고 싶다면 스토리를 들려주어야 한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 346p] 스토리는 사람들을 고무시키고 자극하는 엄청난 위력을 지니고 있다. 그리고 대부분의 경우, 그 힘을 통제하기 위해 풍부한 창의성을 발휘할 필요도 없다. 우리는 그저 매일매일의 삶이 만들어내는 훌륭한 스토리를 포착할 준비만 갖춰두면 되는 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 337-338p] 이렇게 다양한 플롯들을 살펴보는 것은 새로운 스토리를 만들어내기 위해서가 아니다. 당신이 소설이나 광고 문안을 쓰지 않는 한, 이것들은 그리  도움이 되지 못할 것이다. 이제껏 플롯들을 검토한 것은 잠재성 있는 스토리를 발견하는 방법을 익히기 위해서도. 제러드 스토리와 같은 이야기가 우리 책상 위에 올라왔을 때, 그 안에 숨어 있는 중요 요소들을 알아보기 위해서다.<br>
+    거대한 난관에 부딪히지만 이를 극복한 이야기는 도전 플롯이다. 도전 플롯은 사람들이 힘든 도전에 맞서 싸우고 더욱 노력하도록 고취시킨다. 만일 그러한 감정이 우리가 성취하고자 하는 목표와 밀접하게 연관되어 있다면, 당장 그 스토리를 움켜쥐어라. 그저 게시판에 붙여놓고 잊어버려서는 안 된다!<br>
+    만약 당신이 새로운 팀을 이끌고 있다면, 기업 문화에 새바람을 일으키고 싶다면 창의성 플롯을 검토하라. 부하 직원들이 차 뒤에 금속 부품을 매달고 질질 끌며 주차장을 몇 시간이고 내달렸다는 이야기를 들은 순간, 당신은 무언가를 발견한 것이다.<br>
+    당신이 무엇을 찾고 있는지 알아야 한다. 당신은 새로운 것을 만들어낼 필요가 없다. 크게 부풀리거나 <<영혼을 위한 달고기 수프>> 시리즈처럼 멜로드라마로 꾸밀 필요도 없다. 당신은 그저 삶이 선물을 줄 때, 그것을 알아차리기만 하면 된다.
+    <br><br>
+
+    <a></a>
+    [스틱! 330p] 우리는 엄청난 양에 달하는 고무적인 스토리들을 검토한 후, 세 개의 기본 플롯이 존재한다는 결론을 내릴 수 있었다. 바로 도전 플롯, 연결 플롯, 그리고 창의성 플롯이다.
+    <br><br>
 
     <a></a>
     [스틱! 317p] 우리는 스토리를 무시하고 곧바로 '팁'으로 달려들고자 하는 유혹을 떨쳐버려야 한다.
