--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,9 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.36]</h1><br><br><br>
-
-
+  <h1>The War of Genesis III[Lv.40]</h1><br><br><br>
 
 
 
@@ -67,8 +65,30 @@
 
 
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(011621): 6(+12EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 3-1<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011521): 4(+8EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-6<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011121): 4(+8EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-5<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011121): 3(+6EXP)<br>
+
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  PKROMEDA ACTIVATION(010921): 10(+20EXP)<br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011021): 10(+20EXP)<br>
 
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   PKROMEDA ACTIVATION(010921): 5(+10EXP)<br>
