--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.103]</h1>
+    <h1>Karazhan Library[Lv.105]</h1>
 
     <p style="margin-top:45px;"><pre>
 
@@ -116,7 +116,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.7]</h2></strong>
+    <h2><strong>심리학[Lv.8]</h2></strong>
+      [클루지]-개리 마커스<br>
       [뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤<br>
       [욕망의 진화]-데이비드 버스<br>
       <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
@@ -134,7 +135,8 @@
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
       [마음을 훔치는 대화법]-임철웅<br>
       2x[침묵이라는 무기]-코르넬리아 토프<br>
-    <h2><strong>경영[Lv.8]</h2></strong>
+    <h2><strong>경영[Lv.9]</h2></strong>
+      [러쉬]-토드 부크홀츠<br>
       [스틱!]-칩 히스·댄 히스<br>
       [배민다움]-홍성태<br>
       <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
@@ -144,6 +146,7 @@
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
     <h2><strong>사회[Lv.7]</h2></strong>
+      [지적 대화를 위한 넓고 얕은 지식 0]-채사장<br>
       [플랫폼 레볼루션]-마셜 밴 앨스타인<br>
       [디지털 트렌드 2021]-권병일<br>
       [트렌드 모니터(2021)]-최인수<br>
@@ -183,7 +186,9 @@
 
     <p><pre>
       <h2>2021년 1월 독서</h2>
-
+        <li>사회:[지적 대화를 위한 넓고 얕은 지식 0]-채사장</li>
+        <li>심리:[클루지]-개리 마커스</li>
+        <li>경영:[러쉬]-토드 부크홀츠</li>
     </p></pre>
 
     <p><pre>
