--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -65,6 +65,10 @@
 
 
 
+
+  <a></a>안드로이드 JAVA : 02. Java - 29. 제너릭 개념<br>
+  <a></a>안드로이드 JAVA : 02. Java - 28. 접근제어자 실습<br>
+  <a></a>안드로이드 JAVA : 02. Java - 27. 접근제어자 개념<br>
   <a></a>안드로이드 JAVA : 02. Java - 26. 인터페이스 실습<br>
   <a></a>안드로이드 JAVA : 02. Java - 25. 인터페이스 개념<br>
   <a></a>안드로이드 JAVA : 02. Java - 24. 상속 (실습)<br>
