--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -61,6 +61,35 @@
 
 
 
+
+
+
+    <a></a>
+    [클루지 111-112p] 우리 인간은 우리가 듣는 것을 왜 그렇게 자주 무비판적으로 받아들이는 것일까? 그 이유는 애당초 지각을 위해 사용되던 기제로부터 신념이 진화했기 때문이다. 그리고 지각의 경우에는 우리가 보는 것의 상당 부분이 참이다. 우리가 볼 수 있는 것은 대개 믿어도 별 문제가 없다.<br>
+    그런데 신념의 생성과 소멸을 둘러싼 주기도 똑같은 식을오 진행된다. 우리는 직접 감각을 통해서든 아니면 간접적으로 말과 대화를 통해서든, 어떤 정보를 얻게 되면 그것을 곧바로 믿는 경향이 있다. 그리고 나중에야 비로소 그것이 믿을 만한 것인지 따져본다.<br>
+    그런데 이렇게 신념의 주기까지 "먼저 쏘고 나중에 질문하라."는 식으로 진행되면 문제가 생긴다. 왜냐하면 언어의 세계는 시각의 세계보다 훨씬 덜 믿을 만하기 때문이다.
+    <br><br>
+
+    <a></a>
+    [클루지 108p] 만약 여러분이 어떤 사람으로 하여금 무엇을 믿을 만한 이유를 스스로 만들어내도록 할 수만 있다면, 그 사람은 그것을 정말로 믿기 시작할 것이며, 경우에 따라서는 여러분을 꾸짓기까지 할 것이다. 정말로 합리적인 사람이라면 흔들림 없이 참된 전제에서 참된 결론으로 나아가면서, 오직 참된 것만을 믿을 것이다. 그러나 진화의 산물이자 클루지인 우리 인간은 종종 결론에서 출발해 그것을 믿기 위한 이유를 찾는 식으로 거꾸로 나아가는 비합리적인 존재이다.
+    <br><br>
+
+    <a></a>
+    [클루지 104p] 우리는 이미 가지고 있는 신념에 현혹되어 어떤 주장이 논리적인지 주의 깊게 따지는 일을 너무 자주 게을리 한다.
+    <br><br>
+
+    <a></a>
+    [클루지 100p] 동기에 의한 추론은 왜 존재할까? 이것은 진화의 관성 탓이라기보다 우리에게 예견의 능력이 없기 때문이다. 우리는 진화를 통해 신중하게 추론하는 능력을 가지게 되었지만, 그것을 현명하게 사용하는 데 필요한 통찰력을 함께 지니고 있지는 않다. 우리에게는 추론이라는 강력한 도구와 자기기만이라는 위험한 유혹이 결합하면, 어떤 큰 위험이 따르는지를 예견할 능력이 없다. 즉 우리에게는 사실상 우리가 편향되지 않도록 막아줄 내적 장치란 존재하지 않는다. 결국 신중한 추론의 기제를 얼마만큼 사용할지 결정하는 것은 우리의 의식적인 자아의 몫이며, 때문에 우리는 우리가 원하는 만큼 편향될 수밖에 없다.
+    <br><br>
+
+    <a></a>
+    [클루지 97p] 우리는 우리가 믿고 싶은 것을 우리가 믿고 싶지 않은 것보다 훨씬 더 관대하게 받아들이는 경향이 있다. 이것은 '동기에 의한 추론(motivated reasoning)'이라고 불리는 편향으로서 확증 편향과도 비슷한 구석이 있다. 확증 편향은 우리의 신념과 일치하는 자료에 주의가 쏠리는 자동적인 경향인 반면, 동기에 의한 추론은 우리가 좋아하는 것보다 좋아하지 않는 것에 대해 더 까다롭게 따지는 보완적인 경향이다.
+    <br><br>
+
+    <a></a>
+    [클루지 92p] 우리는 주제가 무엇이든 우리의 신념을 위협할 만한 것보다 우리의 신념에 잘 들어맞는 것에 더 주의를 기울이는 경향이 있다. 심리학자들은 이것을 '확증 편향(confirmation bias)'이라고 부른다. 예컨대 우리가 어떤 이론을 믿고 있다면, 그것을 위협할지도 모를 증거보다 그것을 지지하는 증거가 우리 눈에 더 잘 띄는 경향이 있다.
+    <br><br>
+
     <a></a>
     [클루지 87p] 친숙한 것을 선호하는 경향은 훨씬 중요한 이해관계가 걸린 현실 세계에서도 당연히 나타난다. 이것은 왜 현직에 있는 사람이 선거에서 거의 언제나 유리한 위치에 있는지를 설명해준다.
     <br><br>
@@ -674,7 +703,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 263p] 브랜드는 뇌 속에 있는 신경 네트워크라고 할 수 있다. 그런데 신경 네트워크에는 매운 특별한 특징이 있다. 네트워크에 참가하고 있는 요소 가운데 일부만 동시에 자극받아도 전체 네트워크가 활성화된다는 점이다. 다시 말해, 약간의 지시 신호만으로도 머릿속에 있는 전체 브랜드 이미지를 활성화시키고, 이를 통해 구매결정에 무의식적인 영향력을 행사할 수 있다.
+    [뇌, 욕망의 비밀을 풀다 263p] 브랜드는 뇌 속에 있는 신경 네트워크라고 할 수 있다. 그런데 신경 네트워크에는 매우 특별한 특징이 있다. 네트워크에 참가하고 있는 요소 가운데 일부만 동시에 자극받아도 전체 네트워크가 활성화된다는 점이다. 다시 말해, 약간의 지시 신호만으로도 머릿속에 있는 전체 브랜드 이미지를 활성화시키고, 이를 통해 구매결정에 무의식적인 영향력을 행사할 수 있다.
     <br><br>
 
     <a></a>
