--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -64,8 +64,7 @@
 
 
 
-
-
+  <a></a>안드로이드 JAVA : 02. Java - 30. 파이널 과제 설명<br>
   <a></a>안드로이드 JAVA : 02. Java - 29. 제너릭 개념<br>
   <a></a>안드로이드 JAVA : 02. Java - 28. 접근제어자 실습<br>
   <a></a>안드로이드 JAVA : 02. Java - 27. 접근제어자 개념<br>
