--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -64,6 +64,16 @@
 
 
 
+
+
+
+
+  <a></a>
+  class101 자청 자동수익 강의 3-2<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011821): 2(+4EXP)<br>
+
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a>
   PKROMEDA ACTIVATION(011621): 6(+12EXP)<br>
