--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.40]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.42]</h1><br><br><br>
 
 
 
@@ -67,6 +67,27 @@
 
 
 
+
+
+
+
+  <a></a>
+  class101 자청 자동수익 강의 3-5<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(012021): 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 3-4<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(012021): 2(+4EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 3-3<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(011921): 2(+4EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 3-2<br>
