--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,24 +49,34 @@
 
   </ul>
   <div id="contents">
-    <img src="swords.gif" width="100%">
+    <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.28]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.31]</h1><br><br><br>
 
+  <h3 style="text-align:center">Spells Acquired</h3><br>
 
+    <img src="Spell_Frostbolt.png" width="10%" title="Frostbolt is a level 1 mage spell that deals frost direct damage and chills the target, slowing its movement speed. This spell is the primary source of damage for a frost mage.">
 
+    <img src="Spell_Fire Blast.png" width="10%" title="Fire Blast is a level 2 mage spell that deals direct Fire damage. It is an instant cast spell, and key to a Fire mage's burst dps.">
 
+    <img src="Spell_Frostnova.png" width="10%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source.">
 
-
-
-
-
+    <br><br><br><br><br>
 
 
 
     <a></a>
+    [클루지 153p] 누군가 신중한 판단 대신에 여러모로 취약하고 편향된 무의식적 반사 체계에 상습적으로 의존한다면 그것은 어리석은 일이다. 그러나 조상 전래의 반사 체계를 완전히 버리려고 하는 것도 마찬가지로 어리석은 짓이다. 이것은 완전히 비합리적인 체계가 아니라, 그저 덜 논리적일 뿐이다. 결론적으로 말해 진화는 우리에게 상이한 능력을 지닌 두 체계를 남겨 주었다. 하나는 틀에 박힌 일을 처리할 때 뛰어난 능력을 발휘하는 반사 체계이고, 다른 하나는 틀을 벗어나 생각할 때 유익한 숙고 체계다.<br>
+    우리가 이 두 체계의 장단점을 인식하고 조화를 꾀할 때, 우리의 결정이 편향되기 쉬운 상황들을 밝혀내고 이런 편향을 극복할 전략을 마련할 수 있을 때, 우리는 궁극적으로 지혜로워질 수 있을 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 135p] 우리가 무엇을 생각하는지, 결정의 순간에 우리가 무엇을 기억 속으로 불러내는지가 때로는 결정적인 차이를 낳는다. 실제로 광고업 전체는 바로 이런 원리에 기초하고 있다. 어떤 상품이 사람들의 머릿속에 유쾌한 연상을 불러일으킨다면 그것이 적절하든 적절하지 않든 그 상품은 더 잘 팔릴 것이다.
+    <br><br>
+
+    <a></a>
     [클루지 111-112p] 우리 인간은 우리가 듣는 것을 왜 그렇게 자주 무비판적으로 받아들이는 것일까? 그 이유는 애당초 지각을 위해 사용되던 기제로부터 신념이 진화했기 때문이다. 그리고 지각의 경우에는 우리가 보는 것의 상당 부분이 참이다. 우리가 볼 수 있는 것은 대개 믿어도 별 문제가 없다.<br>
-    그런데 신념의 생성과 소멸을 둘러싼 주기도 똑같은 식을오 진행된다. 우리는 직접 감각을 통해서든 아니면 간접적으로 말과 대화를 통해서든, 어떤 정보를 얻게 되면 그것을 곧바로 믿는 경향이 있다. 그리고 나중에야 비로소 그것이 믿을 만한 것인지 따져본다.<br>
+    그런데 신념의 생성과 소멸을 둘러싼 주기도 똑같은 식으로 진행된다. 우리는 직접 감각을 통해서든 아니면 간접적으로 말과 대화를 통해서든, 어떤 정보를 얻게 되면 그것을 곧바로 믿는 경향이 있다. 그리고 나중에야 비로소 그것이 믿을 만한 것인지 따져본다.<br>
     그런데 이렇게 신념의 주기까지 "먼저 쏘고 나중에 질문하라."는 식으로 진행되면 문제가 생긴다. 왜냐하면 언어의 세계는 시각의 세계보다 훨씬 덜 믿을 만하기 때문이다.
     <br><br>
 
@@ -100,7 +110,7 @@
 
     <a></a>
     [클루지 78-79p] 중요한 것은 우리의 모든 신념이 예측하기 어려운 맥락 기억의 여과작용을 거친다는 사실이다. 이전에 형성된 신념이 곧바로 머릿속에 떠오르는 경우도 있지만, 그렇지 않은 경우에는 그때그때 머리에 떠오르는 기억을 바탕으로 우리의 신념을 계산해내지 않으면 안 된다.<br>
-    그러나 신념이 변덕스러운 기억에 얼마나 많이 오염될 수 있는지를 제대로 깨닫고 있는 사람은 그리 많지 않다. 데이트에 관한 질문을 먼저 받았던 학생들을 생각해보라. 아마도 그들은 자기가 행복에 관한 두 번째 질문에 대해 최대한 객관적으로 대답했다고 생각했을 것이다. 이 두 번째 질문에 대한 대답이 첫 번째 질문에 대한 대답 때문에 편향될 수도 있다는 사실을 깨달은 학생이 있다면, 그는 자기의식이 예외적으로 강한 학생일 것이다. 정신의 오염이란 잉처럼 알아차리기 어려운 것이다. 우리가 객관적으로 처신하고 있다는 우리의 주관적 인상은 객관적 현실과 좀처럼 일치하지 않는다. 우리가 객관적으로 사고하려고 아무리 애를 써도 인간의 신념은 기억에 의해 매개되기 때문에, 우리가 아주 어렴풋이 의식하는 사소한 것들의 영향에서 결과 벗어날 수 없다.
+    그러나 신념이 변덕스러운 기억에 얼마나 많이 오염될 수 있는지를 제대로 깨닫고 있는 사람은 그리 많지 않다. 데이트에 관한 질문을 먼저 받았던 학생들을 생각해보라. 아마도 그들은 자기가 행복에 관한 두 번째 질문에 대해 최대한 객관적으로 대답했다고 생각했을 것이다. 이 두 번째 질문에 대한 대답이 첫 번째 질문에 대한 대답 때문에 편향될 수도 있다는 사실을 깨달은 학생이 있다면, 그는 자기의식이 예외적으로 강한 학생일 것이다. 정신의 오염이란 이처럼 알아차리기 어려운 것이다. 우리가 객관적으로 처신하고 있다는 우리의 주관적 인상은 객관적 현실과 좀처럼 일치하지 않는다. 우리가 객관적으로 사고하려고 아무리 애를 써도 인간의 신념은 기억에 의해 매개되기 때문에, 우리가 아주 어렴풋이 의식하는 사소한 것들의 영향에서 결과 벗어날 수 없다.
     <br><br>
 
     <a></a>
@@ -133,7 +143,7 @@
     <br><br>
 
     <a></a>
-    [클루지 45-46p] 맥락 기억의 고유한 단점은 신뢰성과 관련된 것이다. 인간의 깅거은 뇌 속의 위치가 아니라 단서를 중심으로 매우 강력하게 조종되기 때문에 쉽게 혼동이 일어난다.
+    [클루지 45-46p] 맥락 기억의 고유한 단점은 신뢰성과 관련된 것이다. 인간의 기억은 뇌 속의 위치가 아니라 단서를 중심으로 매우 강력하게 조종되기 때문에 쉽게 혼동이 일어난다.
     <br><br>
 
     <a></a>
@@ -1347,6 +1357,47 @@
     <br><br>
 
     <a></a>
+    [정리하는 뇌 55p] 범주화라는 행동은 바깥의 물질세계를 체계적으로 정리하는 데 도움을 줄 뿐만 아니라, 내면의 정신세계, 다시 말해 우리가 주의를 기울이고 기억할 수 있는 대상들을 체계적으로 조작하는 데도 도움을 준다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 53p] 인간은 사회적 동물인 탓에 자신이 직접 겪었다는 이야기들을 듣거나, 딱 한 번의 경험이라 해도 그 설명이 너무나 생생하면 거기에 쉽게 휩쓸리고 만다. 이것은 통계적으로 볼 때 분명 잘못됐고, 그런 편향을 극복하는 법을 익혀야 하는데도 우리는 그러지 못한다. 광고업자들은 이런 점을 잘 알고 있다. TV 광고 중 체험 광고가 많은 것은 바로 이 때문이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 47p] 우리는 이 모든 것을 동시에 생각하고 대처한다고 여기지만, 실제로는 그렇지 않다. 우리의 뇌는 주의를 옮기며 한 번에 하나씩 일을 처리한다. 그리고 이런 전환이 일어날 때마다 신경생물학적 전환에 따르는 비용이 들어간다. 신경계는 이런 식으로는 잘 기능하지 못한다. 일단 어떤 일을 시작하면 우리의 뇌는 그 일에 전념할 때 최고의 기능을 발휘한다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 42p] 생산성과 효율성은 범주화를 통해 체계적으로 정리할 수 있게 도와주는 시스템에 따라 결정된다.(중략)
+    기본적으로 범주화는 정신적 노력을 줄여주고 정보의 흐름을 능률적으로 만들어준다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 41p] 인간의 뇌는 우리가 주의를 기울이지 않는 것들을 우리에게 숨기도록 진화해왔다. 다른 말로 하면 우리에게는 '인지적 맹점(cognitive  blind spot)'이 생기는 경우가 많다. 우리는 자기가 무엇을 놓쳤는지도 알지 못한다. 뇌가 그 순간에 우선시하지 않는 것은 완전히 무시하기 때문이다. 심지어 바로 눈앞에 있는 것을 무시하는 경우도 있다. 인지심리학자들은 이를 '부주의맹(inattentional blindness)'등 다양한 이름으로 부른다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 36-37p] 성공해서 형편이 되는 사람들은 다른 사람을 고용해 주의 필터를 좁히는 문제를 해결한다. 기업 회장, 정치 지도자, 유명 영화배우, 그리고 시간과 주의력을 좀 더 가치 있는 곳에 써야 하는 사람들은 주변에 비서나 보좌진을 둔다. 이런 사람들은 사실 뇌를 확장해주는 역할을 한다. 전전두엽피질(prefrontal cortex)의 주의 필터 기능을 그대로 따라하면서 더욱 개선하는 역할을 하기 때문이다.
+    이렇듯 '대단히 성공한 사람들'은 일상의 자질구레한 문제들은 비서나 보좌진에게 맡기고 자신의 모든 주의력을 자기 앞에 놓인 일에 쏟아붓는다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 32p] 우리의 뇌는 하루에 특정 개수만큼의 판단만 내릴 수 있게 구성되어 있어서 그 한계에 도달하면 중요도에 상관없이 더 이상 판단을 내릴 수 없는 것으로 보인다. 신경과학의 최근 발견 가운데 가장 유용한 것 중 하나는 다음과 같다. "우리 뇌에서 판단을 담당하는 신경 네트워크는 어느 판단이 더 우선적인지 따지지 않는다."
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 30-31p] 결정적으로 중요한 문제가 아닌 한 우리는 이 정도면 됐다 싶은 만족스러운 선택을 내린다.(중략)
+    중요하지 않은 결정에 시간을 낭비하고 싶지 않을 때, 더 정확히 표현하면 개선해봤자 우리의 행복이나 만족을 별로 높여주지도 못할 것을 찾아내느라 시간을 낭비하고 싶지 않을 때 이런 선택 방식을 사용한다.(중략)
+    들어가는 노력과 거기서 나오는 혜택 사이에서 일종의 평형상태를 찾는 것이다. 이런 비용-혜택 분석이 바로 '만족하기'의 핵심이다.(중략)
+    '만족하기'는 자신이 중요하게 여기지 않는 일에 시간을 낭비하지 않기 위한 전략이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 20p] 머릿속이 정리되면 크게 애쓰지 않아도 좋은 의사결정을 할 수 있다.
+    <br><br>
+
+    <a></a>
     [편집광만이 살아남는다] 성공은 만족을 낳고, 만족은 실패를 낳는다. 과거와 현재의 성공에 안주하는 순간, 미래의 생존 근거를 잃게 된다. 항상 긴장하는 편집광만이 살아남는다.
     <br><br>
 
@@ -1409,47 +1460,6 @@
 
     <a></a>
     [이것은 사업을 위한 최소한의 지식이다] 근거가 분명하지 않더라도 숫자를 사용해서 이야기를 하면 상대방을 설득하기가 쉬워진다
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 55p] 범주화라는 행동은 바깥의 물질세계를 체계적으로 정리하는 데 도움을 줄 뿐만 아니라, 내면의 정신세계, 다시 말해 우리가 주의를 기울이고 기억할 수 있는 대상들을 체계적으로 조작하는 데도 도움을 준다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 53p] 인간은 사회적 동물인 탓에 자신이 직접 겪었다는 이야기들을 듣거나, 딱 한 번의 경험이라 해도 그 설명이 너무나 생생하면 거기에 쉽게 휩쓸리고 만다. 이것은 통계적으로 볼 때 분명 잘못됐고, 그런 편향을 극복하는 법을 익혀야 하는데도 우리는 그러지 못한다. 광고업자들은 이런 점을 잘 알고 있다. TV 광고 중 체험 광고가 많은 것은 바로 이 때문이다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 47p] 우리는 이 모든 것을 동시에 생각하고 대처한다고 여기지만, 실제로는 그렇지 않다. 우리의 뇌는 주의를 옮기며 한 번에 하나씩 일을 처리한다. 그리고 이런 전환이 일어날 때마다 신경생물학적 전환에 따르는 비용이 들어간다. 신경계는 이런 식으로는 잘 기능하지 못한다. 일단 어떤 일을 시작하면 우리의 뇌는 그 일에 전념할 때 최고의 기능을 발휘한다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 42p] 생산성과 효율성은 범주화를 통해 체계적으로 정리할 수 있게 도와주는 시스템에 따라 결정된다.(중략)
-    기본적으로 범주화는 정신적 노력을 줄여주고 정보의 흐름을 능률적으로 만들어준다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 41p] 인간의 뇌는 우리가 주의를 기울이지 않는 것들을 우리에게 숨기도록 진화해왔다. 다른 말로 하면 우리에게는 '인지적 맹점(cognitive  blind spot)'이 생기는 경우가 많다. 우리는 자기가 무엇을 놓쳤는지도 알지 못한다. 뇌가 그 순간에 우선시하지 않는 것은 완전히 무시하기 때문이다. 심지어 바로 눈앞에 있는 것을 무시하는 경우도 있다. 인지심리학자들은 이를 '부주의맹(inattentional blindness)'등 다양한 이름으로 부른다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 36-37p] 성공해서 형편이 되는 사람들은 다른 사람을 고용해 주의 필터를 좁히는 문제를 해결한다. 기업 회장, 정치 지도자, 유명 영화배우, 그리고 시간과 주의력을 좀 더 가치 있는 곳에 써야 하는 사람들은 주변에 비서나 보좌진을 둔다. 이런 사람들은 사실 뇌를 확장해주는 역할을 한다. 전전두엽피질(prefrontal cortex)의 주의 필터 기능을 그대로 따라하면서 더욱 개선하는 역할을 하기 때문이다.
-    이렇듯 '대단히 성공한 사람들'은 일상의 자질구레한 문제들은 비서나 보좌진에게 맡기고 자신의 모든 주의력을 자기 앞에 놓인 일에 쏟아붓는다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 32p] 우리의 뇌는 하루에 특정 개수만큼의 판단만 내릴 수 있게 구성되어 있어서 그 한계에 도달하면 중요도에 상관없이 더 이상 판단을 내릴 수 없는 것으로 보인다. 신경과학의 최근 발견 가운데 가장 유용한 것 중 하나는 다음과 같다. "우리 뇌에서 판단을 담당하는 신경 네트워크는 어느 판단이 더 우선적인지 따지지 않는다."
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 30-31p] 결정적으로 중요한 문제가 아닌 한 우리는 이 정도면 됐다 싶은 만족스러운 선택을 내린다.(중략)
-    중요하지 않은 결정에 시간을 낭비하고 싶지 않을 때, 더 정확히 표현하면 개선해봤자 우리의 행복이나 만족을 별로 높여주지도 못할 것을 찾아내느라 시간을 낭비하고 싶지 않을 때 이런 선택 방식을 사용한다.(중략)
-    들어가는 노력과 거기서 나오는 혜택 사이에서 일종의 평형상태를 찾는 것이다. 이런 비용-혜택 분석이 바로 '만족하기'의 핵심이다.(중략)
-    '만족하기'는 자신이 중요하게 여기지 않는 일에 시간을 낭비하지 않기 위한 전략이다.
-    <br><br>
-
-    <a></a>
-    [정리하는 뇌 20p] 머릿속이 정리되면 크게 애쓰지 않아도 좋은 의사결정을 할 수 있다.
     <br><br>
 
 
