--- a/The_economist.html
+++ b/The_economist.html
@@ -49,8 +49,7 @@
   </ul>
 
   <div id="contents">
-  <img src="blizzardstorm.gif" width="100%">
-
+  <img src="swords.gif" width="100%">
 
   <h1>The Economist[Lv.30]</h1><br><br><br>
 
