--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -57,13 +57,17 @@
 
 
 
-  <h1>The War of Genesis II[Lv.96]</h1><br><br><br>
+  <h1>The War of Genesis II[Lv.97]</h1><br><br><br>
 
 
 
 
 
 
+
+  <a></a>안드로이드 JAVA : 03. Android - 02. 안드로이드 스튜디오 투어 2<br>
+  <a></a>안드로이드 JAVA : 03. Android - 01. 안드로이드 스튜디오 투어 1<br>
+  <a></a>안드로이드 JAVA : 02. Java - 31. 파이널 과제 풀이<br>
   <a></a>안드로이드 JAVA : 02. Java - 30. 파이널 과제 설명<br>
   <a></a>안드로이드 JAVA : 02. Java - 29. 제너릭 개념<br>
   <a></a>안드로이드 JAVA : 02. Java - 28. 접근제어자 실습<br>
