--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -51,19 +51,71 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.31]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.32]</h1><br><br><br>
 
-  <h3 style="text-align:center">Spells Acquired</h3><br>
+    <h3 style="text-align:center">Spells Mastered</h3><br>
 
-    <img src="Spell_Frostbolt.png" width="10%" title="Frostbolt is a level 1 mage spell that deals frost direct damage and chills the target, slowing its movement speed. This spell is the primary source of damage for a frost mage.">
+    <div class="buttons">
+       <button class="pulse1"><img src="Spell_Frostbolt.png" onclick="rotateMe(this)" width="100%" title="Frostbolt is a level 1 mage spell that deals frost direct damage and chills the target, slowing its movement speed. This spell is the primary source of damage for a frost mage."></button>
 
-    <img src="Spell_Fire Blast.png" width="10%" title="Fire Blast is a level 2 mage spell that deals direct Fire damage. It is an instant cast spell, and key to a Fire mage's burst dps.">
+       <button class="pulse2"><img src="Spell_Fire_Blast.png" width="100%" title="Fire Blast is a level 2 mage spell that deals direct Fire damage. It is an instant cast spell, and key to a Fire mage's burst dps."></button>
 
-    <img src="Spell_Frostnova.png" width="10%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source.">
+       <button class="pulse1"><img src="Spell_Frostnova.png" width="100%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source."></button>
+    </div>
 
     <br><br><br><br><br>
 
 
+
+
+    <a></a>
+    [클루지 243p] 우리는 정신을 딴 데 두거나 일을 뒤로 미루거나 우리 자신을 속인다. 인간으로 산다는 것은 자기 통제의 산에 오르기 위한 평생의 투쟁이다. 왜냐하면 진화는 우리에게 분별 있는 목표들을 세우기에 충분한 지적 능력을 주었으나, 그것들을 관철하기에 충분한 의지력은 주지 않았기 때문이다.
+    <br><br>
+
+    <a></a>
+    [클루지 238p] 세상에는 정신적 실수의 확률을 체계적으로 높이는 많은 사정들이 존재한다. 그리고 이런 사정들이 실제로 주변에 많이 있을수록 우리는 원시적인 선조 체계로 되돌아가기 쉽다. (중략) 실험 연구들은 뇌에 대한 요구(cognitive load)가 증가하면 선조 체계는 평소대로 작동하는데 반해, 더 현대적인 숙고 체계는 뒤처지기 시작한다는 사실을 보여준다. 특히 인지적인 위급 상황에서, 우리의 더 진화된 능력이 가장 절실히 필요할 때, 이런 능력은 우리를 저버린다. 그리고 분별력 없는 행동이 이어진다. 우리가 정신적으로 (또는 정서적으로) 피로할 때, 우리는 더 고정관념에 사로잡히고 더 자기중심적으로 되며 닻 내림의 고약한 효과에 더 취약해진다.
+    <br><br>
+
+    <a></a>
+    [클루지 230p] 신중한 전전두 사고는 자동적인 정서적 느낌들의 꼭대기에 얹혀 있을 뿐, 이것들을 대체하지는 않는다. 따라서 우리는 이중의 클루지를 지닌 셈이다. 우리의 원초아는 우리의 자아와 끊임없는 갈등 속에 있으며, 우리의 단기적 욕망은 우리의 장기적 욕망과 결코 사이좋게 지내지 못한다.
+    <br><br>
+
+    <a></a>
+    [클루지 219p] 우리를 즐겁게 해주는 것 가운데 많은 것들이 오래 가지 않는다는 사실은 간단한 문제다. 초코바는 우리를 즐겁게 해준다. 그러나 잠깐 동안만 그렇다. 그러다 이내 우리는 그것을 경험하기 이전의 마음 상태로 되돌아간다. 섹스, 영화, 텔레비전 쇼, 록 콘서트도 마찬가지다. 우리가 느끼는 가장 강렬한 쾌락들은 많은 경우 일시적인 것이다.<br>
+    그런가 하면 우리가 장기적인 목표들을 어떻게 세우는지를 보여주는 더 심오한 문제가 있다. 우리는 마치 우리의 장기적인 행복을 최대화하길 바라는 것처럼 처신하지만, 실제로는 무엇이 정말로 우리를 행복하게 해줄지 따지는 데는 놀라울 정도로 형편이 없다.
+    <br><br>
+
+    <a></a>
+    [클루지 218-219p] 음악, 영화, 비디오 게임 같은 오락 형태들은 스티븐 핑커의 표현대로 '쾌락의 기술(pleasure technology)', 곧 우리가 지닌 보상 체계의 반응을 최대화하는 문화적 발명품들이라고 볼 수 있을 것이다. 우리가 이런 것들을 즐기는 까닭은 이것들이 우리 유전자를 널리 퍼뜨리기 때문이거나, 또는 이것들이 우리 선조들에게 특정 이익을 가져다주었기 때문이 아니라, 이것들이 이런 즐김의 대상이 되도록 문화적으로 선택되었기 때문이다. 그리고 이것은 이것들이 우리의 쾌락 추구 기제에 존재하는 허점을 파고들 수 있는 만큼만 그러하다.<br>
+    결론은 다음과 같다. 우리의 쾌락 중추는 인간 종의 생존을 촉진하도록 완벽하게 조율된 몇몇 기제들로 이루어져 있는 것이 아니다. 오히려 이것은 손쉽게 (그리고 유코ㅙ하게!) 속아 넘어가는 조야한 기제들을 잡다하게 모아놓은 것이다. 쾌락은 진화생물학자들이 '번식 적응도'라고 부르는 것과 느슨하게만 상관관계가 있다. 그리고 이것은 당연히 고마운 일이다.
+    <br><br>
+
+    <a></a>
+    [클루지 215p] 현대인의 삶은 진화심리학자들이 '과상 자극(hypoernormal stimulus)'라고 부르는 것들로 가득하다. 과상 자극이란 너무 '완벽'해서 보통 세계에는 없는 것을 말한다. 해부학적으로 불가능한 비율의 바비 인형, 에어브러시로 눈부시게 꾸며낸 모델의 얼굴, 자극적으로 빠르게 건너뛰는 MTV 화면들, 인공적으로 합성된 나이트클럽의 드럽소리 등등이 그러하다. 이런 자극들은 조상 전래의 세계에서는 감히 꿈도 못 꿀 극단적인 흥분과 희열을 전달한다.<br>
+    비디오 게임은 이 점에서 완벽한 예다. 우리가 이것을 즐기는 까닭은 이것이 우리에게 주는 통제감 때문이다. 우리는 게임이 부과하는 도전에 성공할 수 있는 만큼만 게임을 좋아한다. 그러다 이런 통제감을 잃는 순간 우리는 게임을 즐기기를 그만둔다. 공정해 보이지 않는 게임은 재미있어 보이지도 않는다. 왜냐하면 바로 이런 숙달의 느낌을 기대할 수 없기 때문이다. 도전은 바로 이런 희열을 강화하도록 설계되어 있다.<br>
+    비디오 게임은 단순히 통제에 관한 어떤 것이 아니다. 이것은 통제의 정수다. 숙달과 연합된 희열을 최대한 빈번하게 제공하도록 설계된 게임은 기술 습득의 자연스러운 보상 과정에 대한 과상 변형이다. 비디오 게임이 일부 사람들에게 삶 자체 보다도 더 재미있게 느껴진다면, 그것은 바로 이런 게임이 우리의 쾌락 탐지 기제에 내재하는 부정확성을 이용해 먹도록 설계되어 있기 때문이다. 오, 불쌍한 유전자여!
+    <br><br>
+
+    <a></a>
+    [클루지 212-213p] 원래 인간의 뇌라는 것은 텅 빈 작은 다락방과도 같은 것이다. 그래서 그것을 어떤 가구로 채울 것인가는 여러분이 선택하기에 달렸다. 멍청한 사람은 그가 발견하는 온갖 종류의 잡동사니들을 죄다 갖다 놓는다. 그래서 정작 그에게 쓸 만한 지식은 밖으로 밀려나거나 또는 기껏해야 다른 많은 것들과 뒤죽박죽으로 섞여 있어서 그것을 꺼내기가 어렵다. 그러므로 쓸데없는 사실들이 유용한 것들을 밀쳐내지 않도록 하는 것이 아주 중요한 일이다.
+    <br><br>
+
+    <a></a>
+    [클루지 208-209p] 쾌락을 지배하는 신경 하드웨어는 (인간 마음의 다른 많은 부분들처럼) 둘로 나뉘어 있다. (하는 일이 잘 되었을 때 느끼느느 성취감처럼) 일부 쾌락은 숙고 체계로부터 파생되기도 하겠지만, 대부분은 그렇지 않다. 대부분의 쾌락은 조상 전래의 반사 ㄹ체계의 영향 아래 있다. 그리고 이 체계는 우리가 이미 보았듯이 근시안적인 편이며, 두 체계가 갈등을 일으킬 때는 선조 체계에 무게가 쏠린다.
+    <br><br>
+
+    <a></a>
+    [클루지 185p] 총칭사와 수량사 사이의 간격은 우리의 추론 능력에서 빠르고 자동적인 체계와 좀 더 형식적이고 신중한 체계 사이의 간격을 반영할지 모른다. 형식적인 수량사들은 숙고 체계에 의존하는 반면에, 총칭사들은 조상 전래의 반사 체계에 바탕을 두고 있다. 레슬리의 주장에 따르면, 총칭사들은 본질적으로 우리의 더 오래되고 덜 형식적인 인지 체계가 언어적으로 실현된 것이다. 흥미롭게도 총칭사에 대한 우리의 감각은 반사 체계와 비슷하게 느슨한 면이 있다. 예컨대 우리는 "상어들은 수영하는 사람들은 공격한다." 또는 "투견들은 아이들을 물어뜯어 상처를 입힌다."와 같은 총칭적 진술들을 기꺼이 참으로 받아들일 것이다. 하지만 실제로 이런 진술들이 기술하는 상황은 통계적으로 매우 드물며, 다만 그것이 우리에게 강한 인상을 주거나 눈에 잘 띌 뿐이다. 이것은 우리의 자동적이고 덜 신중한 체계가 보여주는 반응양식과 매우 흡사하다.
+    <br><br>
+
+    <a></a>
+    [클루지 183p] 개념을 정의하는 데는 실오라기만큼의 연결만 있어도 충분하다. 왜냐하면 조상 대대로 전해오는 부분 일치의 논리가 단어들을 지배하고 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [클루지 182p] 불완전한 증거를 바탕으로 곧바로 판단을 내리는 습관은 부분 일치(partial matching)의 논리라고 불릴 만한 것이다.<br>
+    그리고 그것의 논리적 반대는 당연히 전체를 볼 때까지 기다리는 태도일 것이다. 그런 태도를 완전 일치(full matching)의 논리라고 부르자. 여러분도 쉽게 상상할 수 있겠듯이, 나무 전체를 볼 때까지 기다리는 자는 결코 오류를 범하지는 않을 것이다. 그러나 다른 한편으로 진짜 나무를 그냥 지나칠 위험도 크다. 진화의 보상을 받는 자들은 너무 신중하게 행동하는 자들이 아니라 잽싸게 결정하는 자들이다.
+    <br><br>
 
     <a></a>
     [클루지 153p] 누군가 신중한 판단 대신에 여러모로 취약하고 편향된 무의식적 반사 체계에 상습적으로 의존한다면 그것은 어리석은 일이다. 그러나 조상 전래의 반사 체계를 완전히 버리려고 하는 것도 마찬가지로 어리석은 짓이다. 이것은 완전히 비합리적인 체계가 아니라, 그저 덜 논리적일 뿐이다. 결론적으로 말해 진화는 우리에게 상이한 능력을 지닌 두 체계를 남겨 주었다. 하나는 틀에 박힌 일을 처리할 때 뛰어난 능력을 발휘하는 반사 체계이고, 다른 하나는 틀을 벗어나 생각할 때 유익한 숙고 체계다.<br>
