--- a/Rhapsody_of_Zephyr.html
+++ b/Rhapsody_of_Zephyr.html
@@ -55,6 +55,19 @@
 
   <h1>Rhapsody of Zephyr[Lv.38]</h1><br><br><br>
 
+  <h3 style="text-align:center">Characters Obtained</h3><br>
+
+  <img src="Character_시라노.png" width="15%" title="시라노 번스타인">
+  <img src="Character_메르세데즈.png" width="15%" title="메르세데즈 보르지아">
+  <img src="Character_체사레.png" width="15%" title="체사레 보르지아">
+
+
+  <br><br><br><br><br>
+
+
+
+
+
 
 
 
