--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -59,7 +59,21 @@
 
   <h1>The War of Genesis II[Lv.97]</h1><br><br><br>
 
+  <h3 style="text-align:center">Characters Obtained</h3><br>
 
+  <img src="Character_GS.png" width="15%" title="GS">
+  <img src="Character_이올린.png" width="15%" title="이올린">
+  <img src="Character_라시드.png" width="15%" title="라시드">
+  <img src="Character_크로우.png" width="15%" title="크로우">
+  <img src="Character_칼스.png" width="15%" title="칼스">
+  <img src="Character_베라딘.png" width="15%" title="베라딘">
+  <img src="Character_이루스.png" width="15%" title="이루스">
+  <img src="Character_디아블로.png" width="15%" title="디아블로">
+  <img src="Character_쿤.png" width="15%" title="쿤">
+
+
+
+  <br><br><br><br><br>
 
 
 
