--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -59,7 +59,14 @@
 
   <h1>The War of Genesis III[Lv.42]</h1><br><br><br>
 
+  <h3 style="text-align:center">Characters Obtained</h3><br>
 
+  <img src="Character_살라딘.png" width="15%" title="살라딘">
+  <img src="Character_크리스티앙.png" width="15%" title="크리스티앙 데 메디치">
+  <img src="Character_죠안.png" width="15%" title="죠안 카트라이트">
+  <img src="Character_얀.png" width="15%" title="얀 지슈카">
+
+  <br><br><br><br><br>
 
 
 
