--- a/Game_and_reality.html
+++ b/Game_and_reality.html
@@ -53,12 +53,12 @@
   <h1>Game & Reality[Lv.11]</h1><br>
   <h2 style="text-align:center">Reality is a game</h2><br><br><br>
 
+  <h3 style="text-align:center">Weapons Obtained</h3><br>
+
+  <img src="Weapon_Thunderfury.jpg" width="10%" title="Thunderfury, Blessed Blade of the Windseeker">
 
 
-
-
-
-
+  <br><br><br><br><br>
 
 
   <a></a><a></a>
