--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -54,10 +54,12 @@
 
   <h1>Show Yourself[Lv.14]</h1><br><br><br>
 
+  <h3 style="text-align:center">Tempest Tarot Cards Obtained</h3><br>
+
+  <img src="Tempest_Tarot_Magician.png" width="15%" title="THE MAGICIAN">
 
 
-
-
+  <br><br><br><br><br>
 
 
 
