--- a/The_economist.html
+++ b/The_economist.html
@@ -53,7 +53,14 @@
 
   <h1>The Economist[Lv.30]</h1><br><br><br>
 
+  <h3 style="text-align:center">Armors Obtained</h3><br>
 
+  <img src="Armor_Firebirds_breast.jpg" width="10%" title="Firebird's Breast">
+  <img src="Armor_Firebirds_down.jpg" width="10%" title="Firebird's Down">
+  <img src="Armor_Firebirds_eye.jpg" width="10%" title="Firebird's Eye">
+
+
+  <br><br><br><br><br>
 
 
 
