--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div style="background-color:#B71C1C">
+  <div style="background-color:#ad1746">
     <h1><a href="index.html" class="inactive">
       G<span style="color:#212F3D">RUZ</span>AM E<span style="color:#212F3D">NTERTAINMENT</span>
     </a></h1>
@@ -67,6 +67,22 @@
 
 
 
+
+
+
+
+
+
+
+    <a></a>
+    [클루지 268-269p] 소비자, 유권자, 시민으로서 우리가 할 일은 언제나 사태를 회의적인 눈으로 바라보고 상대의 질문을 재구성하는 습관을 기르는 것이다.<br>
+    어떤 문제를 다른 식으로 생각해볼 수 있으면 최대한 그렇게 하라. 맥락 기억은 우리가 언제나 과거로 거슬러 올라감을 뜻한다. 우리가 한 문제를 어떻게 생각하느냐는 우리가 무엇을 기억하느냐에 영향을 미칠 수밖에 없으며, 이것은 다시 우리가 어떤 대답을 찾아내느냐에 영향을 미친다. 모든 문제를 하나 이상의 방식으로 물어보는 것은 이런 편향을 교정하는 강력한 수단이 될 수 있다.
+    <br><br>
+
+    <a></a>
+    [클루지 266p] 우리가 이미 살펴보았듯이 우리 인간은 증거들을 침착하고 객관적으로 평가하는 일에 익숙지 않다. 우리의 사고력을 개선시킬 수 있는 가장 간단한 방법 중 하나는 대안이 되는 가설들을 함께 고려하는 훈련을 하는 것이다. 단순히 대안들의 목록을 작성해보는 것만으로도 추론의 신뢰도를 높일 수 있을 것이다.<br>
+    '반대를 생각하라.'라는 간단한 원칙의 가치는 많은 연구들을 통해 증명되었다. 지금 있는 것에 초점을 맞추는 대신에 있었을 만한 것, 또는 있을 수 있는 것에 대해 숙고하는 '반사실적 사고'의 가치 또한 증명되었다.
+    <br><br>
 
     <a></a>
     [클루지 243p] 우리는 정신을 딴 데 두거나 일을 뒤로 미루거나 우리 자신을 속인다. 인간으로 산다는 것은 자기 통제의 산에 오르기 위한 평생의 투쟁이다. 왜냐하면 진화는 우리에게 분별 있는 목표들을 세우기에 충분한 지적 능력을 주었으나, 그것들을 관철하기에 충분한 의지력은 주지 않았기 때문이다.
