--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-  <div style="background-color:#B71C1C">
+  <div style="background-color:#ad1746">
     <h1><a href="index.html" class="inactive">
       G<span style="color:#212F3D">RUZ</span>AM E<span style="color:#212F3D">NTERTAINMENT</span>
     </a></h1>
