--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -79,10 +79,25 @@
 
 
   <a></a>
+  class101 자청 자동수익 강의 4-1<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(012721): 1(+2EXP)<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(012621): 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 3-6<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(012521): 1(+2EXP)<br>
+
+  <a></a>
   class101 자청 자동수익 강의 3-5<br>
 
-  <a></a><a></a><a></a><a></a>
-  PKROMEDA ACTIVATION(012021): 1(+2EXP)<br>
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(012121): 1(+2EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 3-4<br>
