--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -7,13 +7,8 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154162205-1"></script>
-  <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
 
-   gtag('config', 'UA-154162205-1');
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -51,17 +46,20 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.32]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.33]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
     <div class="buttons">
-       <button class="pulse1"><img src="Spell_Frostbolt.png" onclick="rotateMe(this)" width="100%" title="Frostbolt is a level 1 mage spell that deals frost direct damage and chills the target, slowing its movement speed. This spell is the primary source of damage for a frost mage."></button>
+       <button class="pulse1"><img src="Spell_Frostbolt.png" width="100%" title="Frostbolt is a level 1 mage spell that deals frost direct damage and chills the target, slowing its movement speed. This spell is the primary source of damage for a frost mage."><b>Frostbolt</b></button>
 
-       <button class="pulse2"><img src="Spell_Fire_Blast.png" width="100%" title="Fire Blast is a level 2 mage spell that deals direct Fire damage. It is an instant cast spell, and key to a Fire mage's burst dps."></button>
+       <button class="pulse2"><img src="Spell_Fire_Blast.png" width="100%" title="Fire Blast is a level 2 mage spell that deals direct Fire damage. It is an instant cast spell, and key to a Fire mage's burst dps."><b>Fire Blast</b></button>
 
-       <button class="pulse1"><img src="Spell_Frostnova.png" width="100%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source."></button>
+       <button class="pulse1"><img src="Spell_Frostnova.png" width="100%" title="Frost Nova is a level 3 point-blank area of effect mage spell that does light damage and freezes all enemies within 12 yards of the mage, rooting them in place for 8 seconds. Rooted enemies have a chance to break out each time they take damage; this check is made every time damage is taken from any source."><b>Frost Nova</b></button>
     </div>
+
+
+
 
     <br><br><br><br><br>
 
@@ -72,15 +70,80 @@
 
 
 
+    <a></a>
+    [오래된 연장통 219p] 인지심리학자 파스칼 보이어(Pascal Boyer)에 따르면, 사람들은 아주 약간만 낯설고 이상한 것에 가장 관심이 가고 더 잘 기억한다. 반면에 시시하도록 정상적인 것이나 현실과 너무 동떨어져 이해하기 어려울 만큼 이상한 것은 제대로 기억하거나 전파하지 못한다.
+    <br><br>
+
+    <a></a>
+    [오래된 연장통 68p] 문화는 생물학적 진화와 대척점에 있지 않다. 집단 내의 동일성과 집단 간의 차이를 가리키는 개념으로서, 문화는 궁극적으로 자연선택에 의한 진화의 산물로 이해할 수 있다. 이 결론은 보편 문화, 유발된 문화, 전파된 문화 모두에 공평하게 적용된다.
+    <br><br>
+
+    <a></a>
+    [클루지 278p] 클루지를 이겨내는 제안 13: 합리적으로 되려고 노력하라.<br>
+    합리적으로 되자고 스스로 되뇌는 것이 유익할 수 있는 가장 중요한 이유 중 하나는 그렇게 하면 앞서 서술한 다른 기법들을 사용하도록 여러분 자신을 자동적으로 예비(prime) 시킬 수 있기 때문이다. 합리적으로 되자고 스스로 되내는 것 자체만으로는 충분치 않을 것이다. 그러나 이것은 나머지 것들과 시너지 효과를 일으켜 여러분에게 도움을 줄 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 277p] 클루지를 이겨내는 제안 12: 우물을 파되 한 우물을 파라.
+    <br><br>
+
+    <a></a>
+    [클루지 276-277p] 클루지를 이겨내는 제안 11: 생생한 것, 개인적인 것, 일화적인 것을 경계하라.<br>
+    네 발 달린 우리의 선조들은 아마도 가장 화려하거나 극적으로 보이는 것에 주의를 빼앗길 수밖에 없었을 것이다. 그러나 현재의 우리는 시간을 두고 그것에 대해 성찰하는 사치를 누릴 수 있다. 그리고 그것은 그럴 만한 가치가 있다. 비개인적이지만 과학적인 것에 특별한 비중을 두는 것은 생생한 것에 현혹되기 쉬운 우리의 성향을 보완해줄 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 273-274p] 클루지를 이겨내는 제안 10: 자신에게 거리를 두어라.<br>
+    우리의 마음은 가까운 것과 먼 것에 대해 거의 완전히 다른 방식으로 생각하도록 구성되어 있다. 곧 가까운 것은 구체적으로 생각하는 반면에, 먼 것은 추상적으로 생각하는 경향이 있다.(중략)<br>
+    우리는 미래의 내가 현재의 결정에 대해 어떻게 느낄지를 되도록 자문해보아야 한다. 또한 자신이 현재와 미래를 각각 어떻게 다르게 다루는지를 깨달을 필요가 있다. 즉각적인 사고와, 거리를 둔 사고, 이 두가지를 함께 사용하면서 균형을 이룰 수 있을 때, 우리는 더 이상 지금 우리 마음을 지배하는 것에만 의존해 결정을 내리는 어리석음을 범하지 않을 것이다.<br>
+    한 가지 좋은 방법은 '잠시 기다리는 것'이다. 만약 여러분이 어떤 것을 내일도 원한다면 그것은 중요한 것일 가능성이 크다. 그러나 만약 그 욕구가 사라져 버린다면 그것은 중요한 것이 아닐 것이다. 경험적 연구들에 따르면 비합리성은 종종 시간과 함께 사라지는 반면에, 복잡한 결정은 시간을 두고 그것에 몰두할 때 가장 훌륭하게 이루어진다.
+    <br><br>
+
+    <a></a>
+    [클루지 273-274p] 클루지를 이겨내는 제안 9: 누군가가 여러분의 결정을 지켜보고 있다고 상상하라.<br>
+    실험 연구에 따르면 자신의 대답을 정당화할 필요가 있다고 생각하는 사람들은 그렇지 않은 사람들보다 덜 편향된 결정을 내린다. 자신의 결정을 다른 사람들에게 해명할 필요를 느끼는 사람들은 더 많은 인지적 노력을 기울이며, 따라서 관련  정보들을 더 자세히 분석하고, 더 세련된 결정을 내리는 경향이 있다.
+    <br><br>
+
+    <a></a>
+    [클루지 273-274p] 클루지를 이겨내는 제안 8: 언제나 이익과 비용을 비교 평가하라.<br>
+    경제학자들이 기회비용이라고 부르는 것에 특별히 주의할 필요가 있다. 재정적으로든 다른 방식으로든 투자 결정을 내릴 때는, 여러분이 이것 아니면 무엇을 했을지에 대해 곰곰이 생각하라. 하나를 하면 다른 것을 할 수 없다는 점을 잊지 말라.(중략)<br>
+    개인의 수준에서 기회비용을 고려한다는 것은 우리가 무엇을 하기로 결정할 때마다, 이것 아니면 다르게 보낼 시간을 사용하고 있음을 깨닫는 것을 의미한다.
+    <br><br>
+
+    <a></a>
+    [클루지 272-273p] 클루지를 이겨내는 제안 7: 피로하거나 주의가 산만한 상태에서 생각하는 것은 술에 취한 상태에서 운전하는 것과 크게 다르지 않다.<br>
+    우리는 피로할수록 숙고 체계보다 반사 체계에 더 의존하게 된다. 그리고 주의가 산만할 때도 마찬가지다.(중략)<br>
+    만약 여러분이 감정으로만 결정하고자 한다면 더 이상 문제될 것이 없다. 그러나 합리적 결정을 선호한다면, 그것을 위한 '승리의 조건'을 마련할 필요가 있다. 중요한 결정을 내려야 할 때 승리의 조건이란 바로 적절한 휴식과 최대한의 주의집중이다.
+    <br><br>
+
+    <a></a>
+    [클루지 272p] 클루지를 이겨내는 제안 6: 막연히 목표만 정하지 말고 조건 계획을 세워라.<br>
+    심리학자 피터 골위처의 연구에 따르면 목표를 구체적인 '조건 계획'의 형태로 바꿀 경우에, 이를테면 "감자튀김을 보면 그것을 멀리하겠다."와 같이 "X이면 Y 이다."의 형태로 바꿀 경우에, 성공할 확률이 크게 높아진다고 한다.<br>
+    우리의 클루지스러운 본성에 대한 이해는 왜 거의 모든 것들이 조상 전래의 반사 체계를 거쳐야 하는 반면에, 나중에 진화해 반사 체계에 접목된 숙고 체계는 뇌의 결정에 제한적인 영향력만 행사하는지를 설명하는 데 유용할 수 있다. 그리고 잘 짜인 조건 계획은이러한 제한을 비켜갈 수 있는 한 방법을 제공한다. 왜냐하면 이런 계획을 통해서 추상적인 목표가 선조 체계도 이해할 수 있는 형태로, 즉 모든 반사의 기본이 되는 "X이면 Y이다."의 형태로 변환될 수 있기 때문이다. 우리가 더 오래된 체계의 언어를 구사할 수 있을 때, 우리가 목표를 달성할 가능성은 더욱 커질 것이다.
+    <br><br>
+
+    <a></a>
+    [클루지 271p] 클루지를 이겨내는 제안 5: 자신의 충동을 미리 예상하고 앞서 결정하라.
+    <br><br>
+
+    <a></a>
+    [클루지 270p] 클루지를 이겨내는 제안 4: 여러분이 가진 표본의 크기를 결코 잊지 말라.
+    <br><br>
 
 
     <a></a>
-    [클루지 268-269p] 소비자, 유권자, 시민으로서 우리가 할 일은 언제나 사태를 회의적인 눈으로 바라보고 상대의 질문을 재구성하는 습관을 기르는 것이다.<br>
+    [클루지 269p] 클루지를 이겨내는 제안 3: 상관관계가 곧 인과관계가 아님을 명심하라.
+    <br><br>
+
+    <a></a>
+    [클루지 268-269p] 클루지를 이겨내는 제안 2: 문제의 틀을 다시 짜고 질문을 구성하라.<br>
+    소비자, 유권자, 시민으로서 우리가 할 일은 언제나 사태를 회의적인 눈으로 바라보고 상대의 질문을 재구성하는 습관을 기르는 것이다.<br>
     어떤 문제를 다른 식으로 생각해볼 수 있으면 최대한 그렇게 하라. 맥락 기억은 우리가 언제나 과거로 거슬러 올라감을 뜻한다. 우리가 한 문제를 어떻게 생각하느냐는 우리가 무엇을 기억하느냐에 영향을 미칠 수밖에 없으며, 이것은 다시 우리가 어떤 대답을 찾아내느냐에 영향을 미친다. 모든 문제를 하나 이상의 방식으로 물어보는 것은 이런 편향을 교정하는 강력한 수단이 될 수 있다.
     <br><br>
 
     <a></a>
-    [클루지 266p] 우리가 이미 살펴보았듯이 우리 인간은 증거들을 침착하고 객관적으로 평가하는 일에 익숙지 않다. 우리의 사고력을 개선시킬 수 있는 가장 간단한 방법 중 하나는 대안이 되는 가설들을 함께 고려하는 훈련을 하는 것이다. 단순히 대안들의 목록을 작성해보는 것만으로도 추론의 신뢰도를 높일 수 있을 것이다.<br>
+    [클루지 266p] 클루지를 이겨내는 제안 1: 대안이 되는 가설들을 되도록 함께 고려하라.<br>
+    우리가 이미 살펴보았듯이 우리 인간은 증거들을 침착하고 객관적으로 평가하는 일에 익숙지 않다. 우리의 사고력을 개선시킬 수 있는 가장 간단한 방법 중 하나는 대안이 되는 가설들을 함께 고려하는 훈련을 하는 것이다. 단순히 대안들의 목록을 작성해보는 것만으로도 추론의 신뢰도를 높일 수 있을 것이다.<br>
     '반대를 생각하라.'라는 간단한 원칙의 가치는 많은 연구들을 통해 증명되었다. 지금 있는 것에 초점을 맞추는 대신에 있었을 만한 것, 또는 있을 수 있는 것에 대해 숙고하는 '반사실적 사고'의 가치 또한 증명되었다.
     <br><br>
 
@@ -237,7 +300,7 @@
     <br><br>
 
     <a></a>
-    [스틱! 400p] 어떤 종류의 스토리가 잘 먹히는가, 그리고 그것들은 어째서 그토록 효과가 좋은 것일까? 첫 번째 놀라움은 아이디어를 착 달라붙게 만드는 데에는 어떤 종류의 스토리가 효과적인가와 관련이 있다. 답이 뭐냐고? 실질적으로 거의 모든 스토리가 그렇다. 스토리는 굳이 극적일 필요도 없고, 사람들의 정신을 사로잡을 필요도 없으며, 재미있을 필요도 없다. 스토리의 형태 자체가 가장어려운 일을 해주기 때문이다. 우디 앨런은 말했다. "삶의 90퍼센트는 그저 눈에 띄기만 해도 된다." 이는 스토리텔링에 있어서도 마찬가지다. 어떤 것의 가치는 90퍼센트는 시도에서 온다.
+    [스틱! 400p] 어떤 종류의 스토리가 잘 먹히는가, 그리고 그것들은 어째서 그토록 효과가 좋은 것일까? 첫 번째 놀라움은 아이디어를 착 달라붙게 만드는 데에는 어떤 종류의 스토리가 효과적인가와 관련이 있다. 답이 뭐냐고? 실질적으로 거의 모든 스토리가 그렇다. 스토리는 굳이 극적일 필요도 없고, 사람들의 정신을 사로잡을 필요도 없으며, 재미있을 필요도 없다. 스토리의 형태 자체가 가장 어려운 일을 해주기 때문이다. 우디 앨런은 말했다. "삶의 90퍼센트는 그저 눈에 띄기만 해도 된다." 이는 스토리텔링에 있어서도 마찬가지다. 어떤 것의 가치는 90퍼센트는 시도에서 온다.
     <br><br>
 
     <a></a>
@@ -253,10 +316,10 @@
     <br><br>
 
     <a></a>
-    [스틱! 337-338p] 이렇게 다양한 플롯들을 살펴보는 것은 새로운 스토리를 만들어내기 위해서가 아니다. 당신이 소설이나 광고 문안을 쓰지 않는 한, 이것들은 그리  도움이 되지 못할 것이다. 이제껏 플롯들을 검토한 것은 잠재성 있는 스토리를 발견하는 방법을 익히기 위해서도. 제러드 스토리와 같은 이야기가 우리 책상 위에 올라왔을 때, 그 안에 숨어 있는 중요 요소들을 알아보기 위해서다.<br>
+    [스틱! 337-338p] 이렇게 다양한 플롯들을 살펴보는 것은 새로운 스토리를 만들어내기 위해서가 아니다. 당신이 소설이나 광고 문안을 쓰지 않는 한, 이것들은 그리  도움이 되지 못할 것이다. 이제껏 플롯들을 검토한 것은 잠재성 있는 스토리를 발견하는 방법을 익히기 위해서다. 제러드 스토리와 같은 이야기가 우리 책상 위에 올라왔을 때, 그 안에 숨어 있는 중요 요소들을 알아보기 위해서다.<br>
     거대한 난관에 부딪히지만 이를 극복한 이야기는 도전 플롯이다. 도전 플롯은 사람들이 힘든 도전에 맞서 싸우고 더욱 노력하도록 고취시킨다. 만일 그러한 감정이 우리가 성취하고자 하는 목표와 밀접하게 연관되어 있다면, 당장 그 스토리를 움켜쥐어라. 그저 게시판에 붙여놓고 잊어버려서는 안 된다!<br>
     만약 당신이 새로운 팀을 이끌고 있다면, 기업 문화에 새바람을 일으키고 싶다면 창의성 플롯을 검토하라. 부하 직원들이 차 뒤에 금속 부품을 매달고 질질 끌며 주차장을 몇 시간이고 내달렸다는 이야기를 들은 순간, 당신은 무언가를 발견한 것이다.<br>
-    당신이 무엇을 찾고 있는지 알아야 한다. 당신은 새로운 것을 만들어낼 필요가 없다. 크게 부풀리거나 <<영혼을 위한 달고기 수프>> 시리즈처럼 멜로드라마로 꾸밀 필요도 없다. 당신은 그저 삶이 선물을 줄 때, 그것을 알아차리기만 하면 된다.
+    당신이 무엇을 찾고 있는지 알아야 한다. 당신은 새로운 것을 만들어낼 필요가 없다. 크게 부풀리거나 <<영혼을 위한 닭고기 수프>> 시리즈처럼 멜로드라마로 꾸밀 필요도 없다. 당신은 그저 삶이 선물을 줄 때, 그것을 알아차리기만 하면 된다.
     <br><br>
 
     <a></a>
@@ -548,7 +611,7 @@
     "이 기계는 역대 최고로 강력하고 우수한 성능을 자랑합니다."<br>
     * 전통주의자와 조화론자(균형 시스템)<br>
     "안전하고 믿을 수 있는 제품입니다."<br>
-    "이 제품만 있으면 더 이상 신경 슬 일이 없습니다."<br>
+    "이 제품만 있으면 더 이상 신경 쓸 일이 없습니다."<br>
     "당신의 조직에 더 이상의 변화는 필요 없습니다."<br>
     "수십 년 동안 XX명의 고객에게 만족을 준 제품입니다."<br>
     * 쾌락주의자(자극 시스템)<br>
