--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -79,6 +79,8 @@
 
 
 
+  <a></a>안드로이드 JAVA : 03. Android - 04. 안드로이드 스튜디오 투어 4<br>
+  <a></a>안드로이드 JAVA : 03. Android - 03. 안드로이드 스튜디오 투어 3<br>
   <a></a>안드로이드 JAVA : 03. Android - 02. 안드로이드 스튜디오 투어 2<br>
   <a></a>안드로이드 JAVA : 03. Android - 01. 안드로이드 스튜디오 투어 1<br>
   <a></a>안드로이드 JAVA : 02. Java - 31. 파이널 과제 풀이<br>
